add third section

--- a/src/index.html
+++ b/src/index.html
@@ -163,6 +163,218 @@
     </section>
     
 
+    <section class="resume">
+        <div class="container">
+            <h2 class="title_fz16 resume__title">Опыт</h2>
+            <div class="title_fz36 resume__subtitle">Чем я буду полезна</div>
+            <div class="divider"></div>
+
+            <div class="resume__wrapper">
+                <div class="resume__column">
+                    <h3 class="title_fz20 resume__column-title">Образование</h3>
+
+                    <ul>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experians/experians_1.svg" alt="university">
+                                    </div>
+                                    <div class="title_fz14">МГТУ им. Н. Э. Баумана</div>
+                                    <div class="resume__item-location">Диплом магистра | Москва (2014-2020)</div>
+                                </div>
+
+                                <div class="resume__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experians/experians_3.svg" alt="study">
+                                    </div>
+                                    <div class="title_fz14">Udemy</div>
+                                    <div class="resume__item-location">Курсы по Web-разработке</div>
+                                </div>
+
+                                <div class="resume__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="resume__column">
+                    <h3 class="title_fz20 resume__column-title">Опыт работы</h3>
+
+                    <ul>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experians/experians_2.svg" alt="Developer">
+                                    </div>
+                                    <div class="title_fz14">Front-End Developer</div>
+                                    <div class="resume__item-location">EPAM | Москва (2018-2019)</div>
+                                </div>
+
+                                <div class="resume__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experians/experians_4.svg" alt="Design">
+                                    </div>
+                                    <div class="title_fz14">UI/UX Designer</div>
+                                    <div class="resume__item-location">Squad Team | Москва (2018)</div>
+                                </div>
+
+                                <div class="resume__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="skills">
+        <div class="container">
+            <h2 class="title_fz16 skills__title">Навыки</h2>
+            <div class="title_fz36 skills__subtitle">Что я использую в работе</div>
+            <div class="divider"></div>
+
+            <div class="skills__wrapper">
+                <div class="skills__block">
+                    <div class="skills__img">
+                        <img src="icons/skills/html5.png" alt="html5">
+                    </div>
+                    <div class="skills__descr">
+                        <div class="title_fz14 skills__descr-title">HTML5</div>
+                        <div class="skills__text">Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</div>
+                    </div>
+                </div>
+
+                <div class="skills__block">
+                    <div class="skills__img">
+                        <img src="icons/skills/css3.png" alt="css3">
+                    </div>
+                    <div class="skills__descr">
+                        <div class="title_fz14 skills__descr-title">CSS3</div>
+                        <div class="skills__text">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</div>
+                    </div>
+                </div>
+
+                <div class="skills__block">
+                    <div class="skills__img">
+                        <img src="icons/skills/JS.png" alt="js">
+                    </div>
+                    <div class="skills__descr">
+                        <div class="title_fz14 skills__descr-title">Java Script</div>
+                        <div class="skills__text">Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</div>
+                    </div>
+                </div>
+
+                <div class="skills__block">
+                    <div class="skills__img skills_jquery">
+                        <img src="icons/skills/Jquery.png" alt="Jquery">
+                    </div>
+                    <div class="skills__descr skills__descr_jquery">
+                        <div class="title_fz14 skills__descr-title">Jquery</div>
+                        <div class="skills__text">Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует</div>
+                    </div>
+                </div>
+
+                <div class="skills__block">
+                    <div class="skills__img">
+                        <img src="icons/skills/React.png" alt="React">
+                    </div>
+                    <div class="skills__descr">
+                        <div class="title_fz14 skills__descr-title">React</div>
+                        <div class="skills__text">Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально интерактивный продукт именно под ваши цели</div>
+                    </div>
+                </div>
+
+                <div class="skills__block">
+                    <div class="skills__img">
+                        <img src="icons/skills/Node.js.png" alt="Node">
+                    </div>
+                    <div class="skills__descr">
+                        <div class="title_fz14 skills__descr-title">Node.js</div>
+                        <div class="skills__text">Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит</div>
+                    </div>
+                </div>
+
+                <div class="skills__block">
+                    <div class="skills__img">
+                        <img src="icons/skills/Mongo.db.png" alt="Mongo">
+                    </div>
+                    <div class="skills__descr skills__descr_mongo">
+                        <div class="title_fz14 skills__descr-title">Mongo.db</div>
+                        <div class="skills__text">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</div>
+                    </div>
+                </div>
+            </div> <!-- skills__wrapper -->
+            
+            <div class="skills__rating">
+                <div class="skills__item">
+                    <h2 class="title_fz14 skills__item-title">Создание сайтов</h2>
+                    <div class="skills__item-percent">100%</div>
+                    <div class="skills__item-scale">
+                        <span style="width: 100%;"></span>
+                    </div>
+                </div>
+
+                <div class="skills__item">
+                    <h2 class="title_fz14 skills__item-title">Создание приложений</h2>
+                    <div class="skills__item-percent">85%</div>
+                    <div class="skills__item-scale">
+                        <span style="width: 85%;"></span>
+                    </div>
+                </div>
+
+                <div class="skills__item">
+                    <h2 class="title_fz14 skills__item-title">Работа с данными</h2>
+                    <div class="skills__item-percent">90%</div>
+                    <div class="skills__item-scale">
+                        <span style="width: 90%;"></span>
+                    </div>
+                </div>
+
+                <div class="skills__item">
+                    <h2 class="title_fz14 skills__item-title">Креативность</h2>
+                    <div class="skills__item-percent">75%</div>
+                    <div class="skills__item-scale">
+                        <span style="width: 75%;"></span>
+                    </div>
+                </div>
+
+                <div class="skills__item">
+                    <h2 class="title_fz14 skills__item-title">Создание дизайна</h2>
+                    <div class="skills__item-percent">90%</div>
+                    <div class="skills__item-scale">
+                        <span style="width: 90%;"></span>
+                    </div>
+                </div>
+
+                <div class="skills__item">
+                    <h2 class="title_fz14 skills__item-title">Soft skills</h2>
+                    <div class="skills__item-percent">95%</div>
+                    <div class="skills__item-scale">
+                        <span style="width: 95%;"></span>
+                    </div>
+                </div>
+            </div> <!-- skills__rating -->
+        </div> <!-- container -->
+    </section>
 
     <script src="js/script.js"></script>
 </body>
