--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
     </section>
     
 
-    <section class="resume">
+    <!-- <section class="resume">
         <div class="container">
             <h2 class="title_fz16 title__section-title">Опыт</h2>
             <div class="title_fz36 title__section-subtitle">Чем я буду полезна</div>
@@ -244,9 +244,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="skills">
+    <!-- <section class="skills">
         <div class="container">
             <h2 class="title_fz16 title__section-title">Навыки</h2>
             <div class="title_fz36 title__section-subtitle">Что я использую в работе</div>
@@ -322,7 +322,7 @@
                         <div class="skills__text">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</div>
                     </div>
                 </div>
-            </div> <!-- skills__wrapper -->
+            </div>
             
             <div class="skills__rating">
                 <div class="skills__item">
@@ -372,12 +372,12 @@
                         <span></span>
                     </div>
                 </div>
-            </div> <!-- skills__rating -->
-        </div> <!-- container -->
-    </section>
+            </div>
+        </div>
+    </section> -->
 
 
-    <section class="portfolio">
+    <!-- <section class="portfolio">
         <div class="container">
             <h2 class="title_fz16 title__section-title">Портфолио</h2>
             <div class="title_fz36 title__section-subtitle">Мои работы</div>
@@ -404,9 +404,9 @@
                 </a>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="price">
+    <!-- <section class="price">
         <div class="container">
             <h2 class="title_fz16 title__section-title">Прайс-лист</h2>
             <div class="divider"></div>
@@ -448,7 +448,64 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+
+
+    <!-- <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__img">
+                    <img src="img/main_photo.jpg" alt="main_photo">
+                </div>
+
+                <div class="contacts__descr">
+                    <div class="title title_fz16 contacts__title">Контакты</div>
+                    <div class="title_fz36 contacts__subtitle">Свяжитесь со мной</div>
+                    <div class="divider"></div>
+
+                    <div class="tiitle title_fz14 contacts__text">Любым удобным для вас способом:</div>
+                    <div class="contacts__social">
+                        <a href="#" class="contacts__link">
+                            <img src="icons/contact/Facebook.svg" alt="facebook">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/contact/Telegram.svg" alt="Telegram">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/contact/Instagram.svg" alt="Instagram">
+                        </a>
+                    </div>
+
+                    <div class="tiitle title_fz14 contacts__text">Или оставьте ваши данные и я сама вам напишу:</div>
+
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input">
+                            <input required name="name" id="name" type="text">
+                            <label for="name">Ваше имя</label>
+                        </div>
+
+                        <div class="contacts__input">
+                            <input required name="email" id="email" type="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+
+                        <div class="contacts__textarea">
+                            <textarea name="text" id="text"></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+
+                        <div class="contacts__trigger">
+                            <button class="contacts__btn btn">Отправить сообщение</button>
+                            <div class="contacts__policy">
+                                <input required type="checkbox">
+                                <span>Я согласен(а) с <a href="/policy.html">политикой конфиденциальности</a></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section> -->
 
     <script src="js/script.js"></script>
 </body>
