--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -136,18 +136,18 @@
             <div class="about__skills">
                 <div class="about__skills-item">
                     <div class="about__skills-item-circle">
-                        <img src="icons/about/web development.svg" alt="web">
+                        <img src="icons/about/web_development.svg" alt="web">
                     </div>
 
                     <div>
-                        <div class="title_fz14">Web-разработка</div>
+                        <h2 class="title_fz14">Web-разработка</h2>
                         <div class="about__skills-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ea aliquam perspiciatis est pariatur. </div>
                     </div>
                 </div>
 
                 <div class="about__skills-item">
                     <div class="about__skills-item-circle">
-                        <img src="icons/about/Mobile dev.svg" alt="Mobile">
+                        <img src="icons/about/Mobile_dev.svg" alt="Mobile">
                     </div>
 
                     
@@ -470,7 +470,7 @@
 
                 <div class="contacts__descr">
                     <div class="title title_fz16 contacts__title">Контакты</div>
-                    <div class="title_fz36 contacts__subtitle">Свяжитесь со мной</div>
+                    <h2 class="title_fz36 contacts__subtitle">Свяжитесь со мной</h2>
                     <div class="divider"></div>
 
                     <div class="tiitle title_fz14 contacts__text">Любым удобным для вас способом:</div>
@@ -490,17 +490,17 @@
 
                     <form action="#" class="contacts__form">
                         <div class="contacts__input">
-                            <input required name="name" type="text">
+                            <input required name="name" type="text" id="name">
                             <label for="name">Ваше имя</label>
                         </div>
 
                         <div class="contacts__input">
-                            <input required name="email" type="email">
+                            <input required name="email" type="email" id="email">
                             <label for="email">Ваша почта</label>
                         </div>
 
                         <div class="contacts__textarea">
-                            <textarea name="text"></textarea>
+                            <textarea name="text" id="text"></textarea>
                             <label for="text">Ваше сообщение</label>
                         </div>
 
