change text index.html, block scss, img at aside

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
 </head>
 <body>
     <aside class="sidepanel">
-        <a href="#" class="sidepanel__link"><img src="icons/aside/Facebook.svg" alt="facebook"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/aside/Instagram.svg" alt="Instagram"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/aside/Github.svg" alt="Github"></a>
+        <a href="https://vk.com/gusinayamorda1" class="sidepanel__link"><img src="icons/aside/Vk.svg" alt="vkontacte"></a>
+        <a href="https://www.instagram.com/gusinayamorda/" class="sidepanel__link"><img src="icons/aside/Instagram.svg" alt="Instagram"></a>
+        <a href="https://github.com/nikitadubyk" class="sidepanel__link"><img src="icons/aside/Github.svg" alt="Github"></a>
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text"><span>Социальные сети</span></div>
     </aside>
@@ -61,31 +61,31 @@
             <nav>
                 <ul class="menu__list">
                     <li class="menu__link"><a href="#about">ПРО МЕНЯ</a></li>
-                    <li class="menu__link"><a href="#">МОЙ ОПЫТ</a></li>
-                    <li class="menu__link"><a href="#">МОИ НАВЫКИ</a></li>
-                    <li class="menu__link"><a href="#">МОИ РАБОТЫ</a></li>
-                    <li class="menu__link"><a href="#">ПРАЙС-ЛИСТ</a></li>
+                    <li class="menu__link"><a href="#resume">МОЙ ОПЫТ</a></li>
+                    <li class="menu__link"><a href="#skills">МОИ НАВЫКИ</a></li>
+                    <li class="menu__link"><a href="#portfolio">МОИ РАБОТЫ</a></li>
+                    <!-- <li class="menu__link"><a href="#price">ПРАЙС-ЛИСТ</a></li> -->
                     <li class="menu__link"><a href="#contacts">КОНТАКТЫ</a></li>
                 </ul>
             </nav>
 
             <div class="menu__social">
-                <a href="#">
+                <a href="https://github.com/nikitadubyk">
                     <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10 0C4.475 0 0 4.36167 0 9.74107C0 14.0457 2.865 17.6962 6.8375 18.9832C7.3375 19.0749 7.52083 18.7734 7.52083 18.5148C7.52083 18.2835 7.5125 17.6706 7.50833 16.8585C4.72667 17.4459 4.14 15.5517 4.14 15.5517C3.685 14.4274 3.0275 14.1267 3.0275 14.1267C2.12167 13.5228 3.0975 13.5352 3.0975 13.5352C4.10167 13.603 4.62917 14.5389 4.62917 14.5389C5.52083 16.0283 6.97 15.5979 7.54167 15.3493C7.63167 14.719 7.88917 14.2903 8.175 14.0466C5.95417 13.8029 3.62 12.9652 3.62 9.23304C3.62 8.16988 4.0075 7.30085 4.64917 6.61934C4.53667 6.37317 4.19917 5.3827 4.73667 4.04116C4.73667 4.04116 5.57417 3.78012 7.48667 5.03988C8.28667 4.82345 9.13667 4.71606 9.98667 4.7111C10.8367 4.71606 11.6867 4.82345 12.4867 5.03988C14.3867 3.78012 15.2242 4.04116 15.2242 4.04116C15.7617 5.3827 15.4242 6.37317 15.3242 6.61934C15.9617 7.30085 16.3492 8.16988 16.3492 9.23304C16.3492 12.9752 14.0117 13.7987 11.7867 14.0383C12.1367 14.3307 12.4617 14.928 12.4617 15.8408C12.4617 17.1444 12.4492 18.1918 12.4492 18.5082C12.4492 18.7635 12.6242 19.0683 13.1367 18.9708C17.1375 17.692 20 14.0391 20 9.74107C20 4.36167 15.5225 0 10 0Z" fill="#212121"/>
                     </svg>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/gusinayamorda/">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M13.7495 0L6.24951 0C2.79826 0 -0.000488281 2.79875 -0.000488281 6.25L-0.000488281 13.75C-0.000488281 17.2013 2.79826 20 6.24951 20L13.7495 20C17.2008 20 19.9995 17.2013 19.9995 13.75L19.9995 6.25C19.9995 2.79875 17.2008 0 13.7495 0ZM18.1245 13.75C18.1245 16.1625 16.162 18.125 13.7495 18.125L6.24951 18.125C3.83701 18.125 1.87451 16.1625 1.87451 13.75L1.87451 6.25C1.87451 3.8375 3.83701 1.875 6.24951 1.875L13.7495 1.875C16.162 1.875 18.1245 3.8375 18.1245 6.25L18.1245 13.75Z" fill="black"/>
                         <path d="M9.99951 5C7.23826 5 4.99951 7.23875 4.99951 10C4.99951 12.7613 7.23826 15 9.99951 15C12.7608 15 14.9995 12.7613 14.9995 10C14.9995 7.23875 12.7608 5 9.99951 5ZM9.99951 13.125C8.27701 13.125 6.87451 11.7225 6.87451 10C6.87451 8.27625 8.27701 6.875 9.99951 6.875C11.722 6.875 13.1245 8.27625 13.1245 10C13.1245 11.7225 11.722 13.125 9.99951 13.125Z" fill="black"/>
                         <path d="M15.3745 5.29123C15.7425 5.29123 16.0408 4.99295 16.0408 4.62499C16.0408 4.25703 15.7425 3.95874 15.3745 3.95874C15.0065 3.95874 14.7083 4.25703 14.7083 4.62499C14.7083 4.99295 15.0065 5.29123 15.3745 5.29123Z" fill="black"/>
                     </svg>
                 </a>
-                <a href="#">
+                <a href="https://vk.com/gusinayamorda1">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M17.0698 0L2.9292 0C1.3139 0 -0.000488281 1.31439 -0.000488281 2.92969L-0.000488281 17.0703C-0.000488281 18.6856 1.3139 20 2.9292 20L8.82764 20L8.82764 12.9297L6.48389 12.9297L6.48389 9.41406L8.82764 9.41406L8.82764 7.03125C8.82764 5.09262 10.4046 3.51563 12.3433 3.51563L15.8979 3.51563L15.8979 7.03125L12.3433 7.03125L12.3433 9.41406L15.8979 9.41406L15.312 12.9297L12.3433 12.9297L12.3433 20L17.0698 20C18.6851 20 19.9995 18.6856 19.9995 17.0703L19.9995 2.92969C19.9995 1.31439 18.6851 0 17.0698 0Z" fill="black"/>
-                    </svg>                        
+                        <path d="M2.16606 0C0.966064 0 0 0.966065 0 2.16606V17.8339C0 19.0339 0.966064 20 2.16606 20H17.8339C19.0339 20 20 19.0339 20 17.8339V2.16606C20 0.966065 19.0339 0 17.8339 0H2.16606ZM10.5551 5.3204C10.7372 5.31953 10.974 5.35198 11.1236 5.45577C11.234 5.53229 11.3791 5.62085 11.3809 5.9657C11.3867 7.09391 11.3731 8.07667 11.3899 9.22834C11.4119 9.46806 11.5676 9.56751 11.7148 9.56679C11.862 9.56606 12.0308 9.47407 12.157 9.35018C12.8407 8.67893 13.6284 7.0645 14.111 6.00632C14.2911 5.61142 14.5818 5.63676 14.9097 5.63628C16.0079 5.63467 16.4525 5.64855 17.482 5.65433C17.6705 5.65534 17.8347 5.81458 17.8881 5.9296C17.9342 6.02893 17.9672 6.31666 17.7166 6.72383C16.9457 7.97643 16.237 8.98513 15.3791 10.176C15.3249 10.2511 15.2735 10.3407 15.2753 10.4332C15.2769 10.5179 15.3207 10.602 15.3791 10.6634C16.144 11.4681 16.9426 12.2779 17.7256 13.1634C17.9563 13.4243 17.8115 13.8267 17.7482 13.9395C17.7002 14.025 17.4837 14.2452 17.3375 14.2464C16.8054 14.2507 16.8041 14.2464 14.5758 14.2464C14.2458 14.2464 14.1141 14.15 13.9395 13.9666C13.167 13.155 13.2622 13.253 12.4143 12.3466C12.3041 12.2288 12.0858 12.0808 11.8773 12.1751C11.7003 12.2551 11.3764 12.3732 11.3764 12.6986C11.3764 13.0457 11.3764 13.4915 11.3764 13.8357C11.3764 14.0423 11.0523 14.1968 10.8574 14.1968C10.3974 14.1968 10.0302 14.1968 9.34116 14.1968C8.62735 14.1968 8.00949 14.0246 7.66697 13.8583C6.1913 13.1417 5.31399 12.1438 4.35469 10.4829C3.53554 9.06459 2.82276 7.66826 2.12094 6.20487C2.04253 6.04138 1.98681 5.68141 2.5722 5.68141C3.19065 5.68141 3.77064 5.66788 4.71119 5.66788C4.98731 5.66788 5.15904 5.72347 5.27527 5.80777C5.3915 5.89206 5.44866 6.00443 5.50541 6.11011C6.67557 8.28901 6.67823 8.42236 7.51354 9.50362C7.59196 9.60513 7.70505 9.62049 7.78881 9.62095C7.89231 9.62152 7.98804 9.6047 8.06859 9.53972C8.2377 9.40329 8.2852 9.25716 8.2852 9.04784C8.2852 8.31435 8.2852 7.76635 8.2852 6.84567C8.2852 6.59317 8.11415 6.21885 7.92419 6.10109C7.72738 5.9878 7.40391 5.87556 7.41426 5.73557C7.42558 5.58245 7.7819 5.32492 8.41606 5.32492C9.17427 5.32492 9.71163 5.32434 10.5551 5.32041V5.3204Z" fill="black"/>
+                    </svg>            
                 </a>
             </div>
         </div>
@@ -99,10 +99,10 @@
             <span></span>
         </div>
         <div class="container">
-            <div class="title title_fz16 promo__subtitle">Меня зовут Александра Смит</div>
-            <h1 class="title title_fz48 promo__title">Я web-разработчик из города Москва</h1>
+            <div class="title title_fz16 promo__subtitle">Меня зовут Никита Дубык</div>
+            <h1 class="title title_fz48 promo__title">Я web-разработчик из города Горловки</h1>
             <div class="promo__btns">
-                <a href="#" class="promo__link btn">Портфолио</a>
+                <a href="#portfolio" class="promo__link btn">Портфолио</a>
                 <a href="#about" class="promo__link">Про меня</a>
             </div>
         </div>
@@ -128,7 +128,7 @@
 
             <div class="about__text">
                 <div class="title title_fz16 about_title">Про меня</div>
-                <div class="title_fz36 about_subtitle">Меня зовут Александра</div>
+                <div class="title_fz36 about_subtitle">Меня зовут Никита</div>
                 <div class="divider"></div>
                 <div class="about__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, veniam sed! Sint, necessitatibus fuga? Atque, deleniti, sit tempora laboriosam quibusdam dicta ipsam culpa ullam nostrum, explicabo eos! Provident, perspiciatis nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum illum eveniet temporibus ducimus iste quis excepturi assumenda blanditiis facilis debitis tempore tenetur voluptate similique, veniam qui ullam esse, rem saepe!</div>
             </div>
@@ -141,11 +141,11 @@
 
                     <div>
                         <h2 class="title_fz14">Web-разработка</h2>
-                        <div class="about__skills-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ea aliquam perspiciatis est pariatur. </div>
+                        <div class="about__skills-text">Больше года занимаюсь web-программированием и созданием сайтов</div>
                     </div>
                 </div>
 
-                <div class="about__skills-item">
+                <!-- <div class="about__skills-item">
                     <div class="about__skills-item-circle">
                         <img src="icons/about/Mobile_dev.svg" alt="Mobile">
                     </div>
@@ -155,7 +155,7 @@
                         <div class="title_fz14">Разработка приложений</div>
                         <div class="about__skills-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ea aliquam perspiciatis est pariatur. !</div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="about__skills-item">
                     <div class="about__skills-item-circle">
@@ -164,7 +164,7 @@
 
                     <div>
                         <div class="title_fz14">UI/UX Design</div>
-                        <div class="about__skills-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ea aliquam perspiciatis est pariatur.</div>
+                        <div class="about__skills-text">Создаю современный дизайн сайтов для заказчиков</div>
                     </div>
                 </div>
             </div>
@@ -173,10 +173,10 @@
     </section>
     
 
-    <section class="resume">
+    <section class="resume" id="resume">
         <div class="container">
             <h2 class="title_fz16 title__section-title">Опыт</h2>
-            <div class="title_fz36 title__section-subtitle">Чем я буду полезна</div>
+            <div class="title_fz36 title__section-subtitle">Чем я буду полезен</div>
             <div class="divider"></div>
 
             <div class="resume__wrapper">
@@ -190,12 +190,12 @@
                                     <div class="resume__item-icon">
                                         <img src="icons/experians/experians_1.svg" alt="university">
                                     </div>
-                                    <div class="title_fz14">МГТУ им. Н. Э. Баумана</div>
-                                    <div class="resume__item-location">Диплом магистра | Москва (2014-2020)</div>
+                                    <div class="title_fz14">ДонНАСА г.Краматорск</div>
+                                    <div class="resume__item-location">Диплом бакалавра | Краматорск (2017-2022)</div>
                                 </div>
 
                                 <div class="resume__item-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                    Успешно закончил учебу в городе Краматорск и получил диплом бакалавра. 
                                 </div>
                             </div>
                         </li>
@@ -210,7 +210,7 @@
                                 </div>
 
                                 <div class="resume__item-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                    Прошел курсы по: Web-разработке, JavaScript и посадке страницы на CMS WordPress на сайте Udemy.
                                 </div>
                             </div>
                         </li>
@@ -227,36 +227,37 @@
                                         <img src="icons/experians/experians_2.svg" alt="Developer">
                                     </div>
                                     <div class="title_fz14">Front-End Developer</div>
-                                    <div class="resume__item-location">EPAM | Москва (2018-2019)</div>
+                                    <div class="resume__item-location">Фриланс</div>
                                 </div>
 
                                 <div class="resume__item-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                    Больше года разрабатываю сайты под заказ на фриланс биржах. Создал три полноценных проекта с нуля. Использую только современные технологии
+                                    в своей работе.
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <!-- <li>
                             <div class="resume__item">
                                 <div class="resume__item-head">
                                     <div class="resume__item-icon">
                                         <img src="icons/experians/experians_4.svg" alt="Design">
                                     </div>
                                     <div class="title_fz14">UI/UX Designer</div>
-                                    <div class="resume__item-location">Squad Team | Москва (2018)</div>
+                                    <div class="resume__item-location">Squad Team</div>
                                 </div>
 
                                 <div class="resume__item-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                    Создаю дизайн для сайтов, исполь
                                 </div>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="skills">
+    <section class="skills" id="skills">
         <div class="container">
             <h2 class="title_fz16 title__section-title">Навыки</h2>
             <div class="title_fz36 title__section-subtitle">Что я использую в работе</div>
@@ -303,7 +304,7 @@
                     </div>
                 </div>
 
-                <div class="skills__block">
+                <!-- <div class="skills__block">
                     <div class="skills__img">
                         <img src="icons/skills/React.png" alt="React">
                     </div>
@@ -331,7 +332,7 @@
                         <div class="title_fz14 skills__descr-title">Mongo.db</div>
                         <div class="skills__text">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</div>
                     </div>
-                </div>
+                </div> -->
             </div>
             
             <div class="skills__rating">
@@ -343,13 +344,13 @@
                     </div>
                 </div>
 
-                <div class="skills__item">
+                <!-- <div class="skills__item">
                     <h2 class="title_fz14 skills__item-title">Создание приложений</h2>
                     <div class="skills__item-percent">85%</div>
                     <div class="skills__item-scale">
                         <span></span>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="skills__item">
                     <h2 class="title_fz14 skills__item-title">Работа с данными</h2>
@@ -387,7 +388,7 @@
     </section>
 
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="title_fz16 title__section-title">Портфолио</h2>
             <div class="title_fz36 title__section-subtitle">Мои работы</div>
@@ -416,7 +417,7 @@
         </div>
     </section>
 
-    <section class="price">
+    <!-- <section class="price" id="price">
         <div class="container">
             <h2 class="title_fz16 title__section-title">Прайс-лист</h2>
             <div class="divider"></div>
@@ -458,7 +459,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <section class="contacts" id="contacts">
@@ -475,13 +476,13 @@
 
                     <div class="tiitle title_fz14 contacts__text">Любым удобным для вас способом:</div>
                     <div class="contacts__social">
-                        <a href="#" class="contacts__link">
-                            <img src="icons/contact/Facebook.svg" alt="facebook">
+                        <a href="https://vk.com/gusinayamorda1" class="contacts__link">
+                            <img src="icons/contact/Vk.svg" alt="vkontacte">
                         </a>
-                        <a href="#" class="contacts__link">
+                        <a href="https://t.me/gusinayamorda" class="contacts__link">
                             <img src="icons/contact/Telegram.svg" alt="Telegram">
                         </a>
-                        <a href="#" class="contacts__link">
+                        <a href="https://www.instagram.com/gusinayamorda/" class="contacts__link">
                             <img src="icons/contact/Instagram.svg" alt="Instagram">
                         </a>
                     </div>
