add animate.css and wow.js, remove not used img

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
     <meta name="msapplication-TileImage" content="icons/favicon//ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -114,15 +115,15 @@
     </div>
 
     <section class="promo">
-        <div class="hamburger">
+        <div class="hamburger animate__animated animate__fadeInUp">
             <span></span>
             <span class="long"></span>
             <span></span>
         </div>
         <div class="container">
-            <div class="title title_fz16 promo__subtitle">Меня зовут Никита Дубык</div>
-            <h1 class="title title_fz48 promo__title">Я web-разработчик из города Горловки</h1>
-            <div class="promo__btns">
+            <div class="title title_fz16 promo__subtitle animate__animated animate__fadeInLeft">Меня зовут Никита Дубык</div>
+            <h1 class="title title_fz48 promo__title animate__animated animate__fadeInLeft">Я web-разработчик из города Горловки</h1>
+            <div class="promo__btns animate__animated animate__fadeInLeft">
                 <a href="#portfolio" class="btn promo__link">Портфолио</a>
                 <a href="#about" class="promo__link">Про меня</a>
             </div>
@@ -131,7 +132,7 @@
 
 
     <section class="about" id="about">
-        <div class="container">
+        <div class="container wow animate__animated animate__fadeInUp">
            <div class="about__wrapper">
             <div class="about__img">
                 <!-- <img srcset="img/main_photo-min.jpg 300w,
@@ -202,7 +203,7 @@
             <div class="divider"></div>
 
             <div class="resume__wrapper">
-                <div class="resume__column">
+                <div class="resume__column wow animate__animated animate__fadeInLeft" data-wow-delay="0.1s">
                     <h3 class="title_fz20 resume__column-title">Образование</h3>
 
                     <ul>
@@ -238,7 +239,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="resume__column">
+                <div class="resume__column wow animate__animated animate__fadeInLeft" data-wow-delay="0.2s">
                     <h3 class="title_fz20 resume__column-title">Опыт работы</h3>
 
                     <ul>
@@ -286,7 +287,7 @@
             <div class="divider"></div>
 
             <div class="skills__wrapper">
-                <div class="skills__block">
+                <div class="skills__block wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
                     <div class="skills__img">
                         <img src="icons/skills/html5.png" alt="html5">
                     </div>
@@ -296,7 +297,7 @@
                     </div>
                 </div>
 
-                <div class="skills__block">
+                <div class="skills__block wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                     <div class="skills__img">
                         <img src="icons/skills/css3.png" alt="css3">
                     </div>
@@ -306,7 +307,7 @@
                     </div>
                 </div>
 
-                <div class="skills__block">
+                <div class="skills__block wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
                     <div class="skills__img">
                         <img src="icons/skills/JS.png" alt="js">
                     </div>
@@ -316,7 +317,7 @@
                     </div>
                 </div>
 
-                <div class="skills__block">
+                <div class="skills__block wow animate__animated animate__fadeInUp" data-wow-delay="0.7s">
                     <div class="skills__img skills_jquery">
                         <img src="icons/skills/Jquery.png" alt="Jquery">
                     </div>
@@ -326,7 +327,7 @@
                     </div>
                 </div>
 
-                <!-- <div class="skills__block">
+                <!-- <div class="skills__block wow animate__animated animate__fadeInUp">
                     <div class="skills__img">
                         <img src="icons/skills/React.png" alt="React">
                     </div>
@@ -336,7 +337,7 @@
                     </div>
                 </div>
 
-                <div class="skills__block">
+                <div class="skills__block wow animate__animated animate__fadeInUp">
                     <div class="skills__img">
                         <img src="icons/skills/Node.js.png" alt="Node">
                     </div>
@@ -346,7 +347,7 @@
                     </div>
                 </div>
 
-                <div class="skills__block">
+                <div class="skills__block wow animate__animated animate__fadeInUp">
                     <div class="skills__img">
                         <img src="icons/skills/Mongo.db.png" alt="Mongo">
                     </div>
@@ -417,22 +418,22 @@
             <div class="divider"></div>
 
             <div class="portfolio__wrapper">
-                <a href="/window" class="portfolio__item">
+                <a href="/window" class="portfolio__item wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
                     <img src="img/work/window.jpg" alt="window">
                 </a>
-                <a href="/opt" class="portfolio__item">
+                <a href="/opt" class="portfolio__item wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
                     <img src="img/work/global.jpg" alt="global-opt">
                 </a>
-                <a href="/pulse" class="portfolio__item">
+                <a href="/pulse" class="portfolio__item wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                     <img src="img/work/pulse.jpg" alt="pulse">
                 </a>
-                <a href="/prengi" class="portfolio__item vertical">
+                <a href="/prengi" class="portfolio__item vertical wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
                     <img src="img/work/prengi.jpg" alt="prengi">
                 </a>
-                <a href="https://zabory-gorlovka.ru/" class="portfolio__item">
+                <a href="https://zabory-gorlovka.ru/" class="portfolio__item wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
                     <img src="img/work/zabory.jpg" alt="zabory">
                 </a>
-                <a href="https://himchistkagorlovka.ru/" class="portfolio__item horizontal">
+                <a href="https://himchistkagorlovka.ru/" class="portfolio__item horizontal wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
                     <img src="img/work/clean.jpg" alt="clean">
                 </a>
             </div>
@@ -543,6 +544,10 @@
     
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <script src="js/script.js"></script>
 </body>
 </html>
